--- a/.vscode/launch copy.json
+++ b/.vscode/launch copy.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/数据结构篇/双指针/a.out",
+            "program": "${workspaceFolder}/build/remove",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
